--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-+<!doctype html>
+<!doctype html>
          <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <meta charset="utf-8"> 
