--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </HEADER>
+<CENTER>
      <BODY>
          <p><I> Welcome to my company </P>
 <P><B>BINOCHIP</B><I></p>
@@ -13,16 +14,14 @@
 <p>BINOCHIP is company which which provides you notes on HTML for <b>free</b>
 and also helps you to make your own webpage </p></br>
 <p><b>Starting of HTML tags</b></p>
-
+</CENTER>
 <img width=40% src="https://www.w3schools.com/html/img_notepad.png">
-<div align="right">
 <p><ol>
 <li>The first tag is HTML tag which is required to make you webpage work</li>
 <li> the second tag is BODY tag defines the document's body. The body element contains all the contents of an HTML document, such as headings, paragraphs, images, hyperlinks, tables, lists, etc. Note: There can only be one
 body element in an HTML document.</li>
 <li>The third tag is header/h1 tag it is used to make a heading for your HTML page</li>
 <li>The fourth tag is Paragraph tag it is used to make a space where you can write anything </li>
-</div>
          <footer>
               <main class="container-fluid">
                    <div class="row">
